--- a/gift-advisor/src/app/register/register.component.html
+++ b/gift-advisor/src/app/register/register.component.html
@@ -9,12 +9,14 @@
           <td>
             <mat-form-field class="example-full-width" [formGroup]="registerForm">
               <input matInput placeholder="Username" formControlName="username" name="username" required>
+              <mat-hint>Required</mat-hint>
             </mat-form-field>
           </td>
         </tr>
         <tr>
           <td><mat-form-field class="example-full-width"  [formGroup]="registerForm">
             <input matInput placeholder="Password" formControlName="password" type="password" name="password" required>
+            <mat-hint>Required, minimum length - 6 </mat-hint>
           </mat-form-field></td>
         </tr>
         <tr>
