Added populariy sorting and new table in database

--- a/gift-advisor/src/app/gifts/gift.component.html
+++ b/gift-advisor/src/app/gifts/gift.component.html
@@ -32,6 +32,9 @@
                      accept="image/*"
                      (change)="processFile(imageInput)">
             </label>
+            <div class="remove-image">
+              <button mat-raised-button (click)="onDeleteImage()" color="primary">Delete image</button>
+            </div>
             <div class="img-preview" *ngIf="image">
               <img src="{{decodeImage}}" height="200">
             </div>
