--- a/gift-advisor/src/app/login/login.component.html
+++ b/gift-advisor/src/app/login/login.component.html
@@ -25,5 +25,6 @@
   <mat-card-actions>
     <button mat-raised-button [disabled]="!loginForm.valid" (click)="onSubmit()" color="primary">Login</button>
     <button mat-raised-button  (click)="onRegister()" color="primary">Register</button>
+    <button mat-raised-button  (click)="onGifts()" color="primary">Gifts</button>
   </mat-card-actions>
 </mat-card>
