--- a/gift-advisor/src/styles.css
+++ b/gift-advisor/src/styles.css
@@ -2,3 +2,8 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 
+.flex-grow {
+  flex-grow: 1;
+}
+
+
