--- a/gift-advisor/src/app/gifts/gift.component.html
+++ b/gift-advisor/src/app/gifts/gift.component.html
@@ -8,18 +8,24 @@
         <tr>
           <td>
             <mat-form-field class="name" [formGroup]="giftForm">
-              <input matInput [readonly]="!this.isEditable && !isNewGift" [size]="256" placeholder="Name" formControlName="name" name="name" required>
+              <input matInput [readonly]="!this.isEditable && !isNewGift" maxlength="256" placeholder="Name" formControlName="name" name="name" required>
               <mat-hint  *ngIf="isEditable || isNewGift">Required, maximum - 256 characters</mat-hint>
+              <div *ngIf="giftForm.controls.name.errors?.maxlength">
+                Name must be less than 256 characters long.
+              </div>
             </mat-form-field>
           </td>
         </tr>
         <tr>
           <td>
             <mat-form-field class="price" [formGroup]="giftForm">
-              <input matInput [readonly]="!this.isEditable && !isNewGift"  type="number" pattern="[1-9]{1}[0-9]{0,6}" placeholder="Price" formControlName="price"
+              <input matInput [readonly]="!this.isEditable && !isNewGift"  type="number" pattern="[1-9]{1}[0-9]{0,7}" placeholder="Price" formControlName="price"
                      name="price" required>
               <span matSuffix>$</span>
-              <mat-hint  *ngIf="isEditable || isNewGift">Required, 1-1 000 000</mat-hint>
+              <mat-hint  *ngIf="isEditable || isNewGift">Required, 1-99 999 999</mat-hint>
+              <div *ngIf="giftForm.controls.price.errors?.pattern">
+                Price is a number between 1 and 99 999 999
+              </div>
             </mat-form-field>
           </td>
         </tr>
@@ -46,10 +52,14 @@
             <textarea  matInput cdkTextareaAutosize
                       placeholder="Description" formControlName="description" name="Description"
                       #autosize="cdkTextareaAutosize"
+                       maxlength="1024"
                       cdkAutosizeMinRows="1"
                       cdkAutosizeMaxRows="10">
             </textarea>
               <mat-hint  *ngIf="isEditable || isNewGift">Maximum - 1024 characters</mat-hint>
+              <div *ngIf="giftForm.controls.name.errors?.maxlength">
+                Description must be less than 1024 characters long.
+              </div>
             </mat-form-field>
           </td>
         </tr>
