--- a/gift-advisor/src/app/gifts/gift.component.html
+++ b/gift-advisor/src/app/gifts/gift.component.html
@@ -10,22 +10,28 @@
             <mat-form-field class="name" [formGroup]="giftForm">
               <input matInput [readonly]="!this.isEditable && !isNewGift" maxlength="256" placeholder="Name" formControlName="name" name="name" required>
               <mat-hint  *ngIf="isEditable || isNewGift">Required, maximum - 256 characters</mat-hint>
-              <div *ngIf="giftForm.controls.name.errors?.maxlength">
+              <mat-error *ngIf="giftForm.controls.name.errors?.maxlength">
                 Name must be less than 256 characters long.
-              </div>
+              </mat-error>
+              <mat-error *ngIf="giftForm.controls.name.errors?.required">
+                Name is required
+              </mat-error>
             </mat-form-field>
           </td>
         </tr>
         <tr>
           <td>
             <mat-form-field class="price" [formGroup]="giftForm">
-              <input matInput [readonly]="!this.isEditable && !isNewGift"  type="number" pattern="[1-9]{1}[0-9]{0,7}" placeholder="Price" formControlName="price"
+              <input matInput [readonly]="!this.isEditable && !isNewGift" placeholder="Price" formControlName="price"
                      name="price" required>
               <span matSuffix>$</span>
               <mat-hint  *ngIf="isEditable || isNewGift">Required, 1-99 999 999</mat-hint>
-              <div *ngIf="giftForm.controls.price.errors?.pattern">
-                Price is a number between 1 and 99 999 999
-              </div>
+              <mat-error *ngIf="giftForm.controls.price.errors?.pattern">
+                Price is a number between 0 and 99 999 999, decimal number with ',' or '.'
+              </mat-error>
+              <mat-error *ngIf="giftForm.controls.price.errors?.required">
+                Price is required
+              </mat-error>
             </mat-form-field>
           </td>
         </tr>
@@ -57,9 +63,9 @@
                       cdkAutosizeMaxRows="10">
             </textarea>
               <mat-hint  *ngIf="isEditable || isNewGift">Maximum - 1024 characters</mat-hint>
-              <div *ngIf="giftForm.controls.name.errors?.maxlength">
+              <mat-error *ngIf="giftForm.controls.name.errors?.maxlength">
                 Description must be less than 1024 characters long.
-              </div>
+              </mat-error>
             </mat-form-field>
           </td>
         </tr>
@@ -85,8 +91,8 @@
                   [matChipInputAddOnBlur]="true"
                   (matChipInputTokenEnd)="add($event)">
               </mat-chip-list>
-              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
-                <mat-option *ngFor="let tag of filteredTags | async" [value]="tag">
+              <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)" >
+                <mat-option *ngFor="let tag of filteredTags | async"  [value]="tag">
                   {{tag}}
                 </mat-option>
               </mat-autocomplete>
@@ -103,19 +109,14 @@
             {{message}}
           </td>
         </tr>
-        <!--        <tr>-->
-        <!--          <td><mat-form-field class="message"  [formGroup]="giftForm">-->
-        <!--            <input matInput [ placeholder="Description" formControlName="description"  name="Description" required>-->
-        <!--          </mat-form-field></td>-->
-        <!--        </tr>-->
       </table>
 
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button *ngIf="isNewGift" [disabled]="!giftForm.valid" (click)="onSubmit()" color="primary">Add
+    <button mat-raised-button *ngIf="isNewGift" (click)="onSubmit()" color="primary">Add
     </button>
-    <button mat-raised-button *ngIf="isEditable && !isNewGift" [disabled]="!giftForm.valid" (click)="onUpdate()"
+    <button mat-raised-button *ngIf="isEditable && !isNewGift" (click)="onUpdate()"
             color="primary">Update
     </button>
     <button mat-raised-button *ngIf="isEditable && !isNewGift" (click)="onDelete()" color="primary">Delete</button>
