--- a/gift-advisor/src/app/login/login.component.html
+++ b/gift-advisor/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card class="example-card">
   <mat-card-header>
-    <mat-card-title>Login</mat-card-title>
+    <mat-card-title>Login and registry</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <form class="loginForm">
@@ -8,14 +8,22 @@
         <tr>
           <td>
             <mat-form-field class="example-full-width" [formGroup]="loginForm">
-              <input matInput placeholder="Username" formControlName="username" name="username" required>
+              <input matInput placeholder="Username"  maxlength="64" formControlName="username" name="username" required>
+              <mat-hint>Required, maximum - 64 character</mat-hint>
             </mat-form-field>
+            <div *ngIf="loginForm.controls.username.errors?.maxlength">
+              Name must be less than 64 characters long.
+            </div>
           </td>
         </tr>
         <tr>
           <td><mat-form-field class="example-full-width"  [formGroup]="loginForm">
-            <input matInput placeholder="Password" formControlName="password" type="password" name="password" required>
+            <input matInput placeholder="Password"  minLength="8" maxlength="64"  formControlName="password" type="password" name="password" required>
+            <mat-hint>Required, minimum length - 8, maximum - 64 </mat-hint>
           </mat-form-field></td>
+          <mat-error *ngIf="loginForm.controls.password.errors?.maxlength || loginForm.controls.password.errors?.minlength">
+            Password must be less than 64 and more than 8 characters long.
+          </mat-error>
         </tr></table>
       <mat-error *ngIf="errMsg">
         {{ errMsg }}
@@ -24,7 +32,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button [disabled]="!loginForm.valid" (click)="onSubmit()" color="primary">Login</button>
-    <button mat-raised-button  (click)="onRegister()" color="primary">Register</button>
+    <button mat-raised-button  [disabled]="!loginForm.valid"  (click)="onRegister()" color="primary">Register</button>
     <button mat-raised-button  (click)="onGifts()" color="primary">Gifts</button>
   </mat-card-actions>
 </mat-card>
