--- a/gift-advisor/src/app/gifts/gifts.component.html
+++ b/gift-advisor/src/app/gifts/gifts.component.html
@@ -112,7 +112,7 @@
           </a>
           <h5 mat-line>  {{gift.description}}</h5>
           <h5 mat-line>  {{gift.price}}$</h5>
-          <img *ngIf="gift.image_url.trim()" src="http://localhost:8080/{{gift.image_url.trim()}}" height="70">
+          <img *ngIf="gift.image_url.trim()" src="http://10.0.2.15:30163/{{gift.image_url.trim()}}" height="70">
         </mat-list-item>
       </mat-nav-list>
     </div>
